Able insert Field(name and ControlId) and getall Fields(some minor issues)

--- a/DynamicForm/Views/Forms/Index.cshtml
+++ b/DynamicForm/Views/Forms/Index.cshtml
@@ -198,7 +198,7 @@
                             "autoWidth": true,
                             "render": function (data, type, row) {
                             //return '<a  type="button"  data-tw-toggle="modal" class="tooltip btn btn-success text-white" title="Fields">Fields</a> > ';
-                            return '<a>Fields </>'
+                            return '<a  href="Fields">Fields </>'
                               }
                         }
                     ]
