--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -1,9 +1,14 @@
 ﻿@model Core.Services.TemplateFields.Requests.FieldRequest
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Fields";
 }
-
+<link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css"
+      integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+<link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.12/dist/sweetalert2.min.css" rel="stylesheet" />
 <style>
     .modal {
         background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
@@ -19,16 +24,16 @@
                 <div class="text-left">
                 </div>
                 <div input-group>
-                    <input type="text" placeholder="Name">&nbsp;&nbsp;
+                    @*<input type="text" placeholder="Name">&nbsp;&nbsp;
                     <select name="Datatype" id="selecteddatatype" style="padding:3px;">
                         &nbsp;&nbsp;
                         <option value="Confirmed">Heading</option>
                         <option value="Cancelled">Text Box</option>
                     </select>
-                    <button class="btn btn-group-sm btn-info">Search</button>
+                    <button class="btn btn-group-sm btn-info">Search</button>*@
                     @*<button data-bs-toggle="modal" data-bs-target="#fieldCreate" class="btn btn-primary me-4" style="margin-left:30%;">Create</button>*@
                     <div class="pull-right">
-                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#fieldCreate">
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#add-field-model">
                             <span class="glyphicon glyphicon-plus"></span> Create
                         </button>
                     </div>
@@ -39,10 +44,10 @@
             </div>
             <div class="x_content">
                 <div id="wait" class="loader" style="display:none;width:100px;height:100px;position:absolute;top:50%;left:50%;padding:2px;z-index:100000"></div>
-                <table class="table table-striped table-bordered table-responsive" id="tbForm" style="width:100%">
+                <table class="table table-striped table-bordered table-responsive" id="tbField" style="width:100%">
                     <thead>
                         <tr class="bg-secondary">
-                            <th style="min-width:100px">Serial Number</th>
+                            @*<th style="min-width:100px">Serial Number</th>*@
                             <th style="min-width:30px">Name</th>
                             <th style="min-width:30px">DataType</th>
                             <th style="min-width:30px">Actions</th>
@@ -53,7 +58,7 @@
             </div>
         </div>
 
-        <form id="createField" method="post" enctype="multipart/form-data" autocomplete="off">
+        @*<form id="createField" method="post" enctype="multipart/form-data" autocomplete="off">
             <div id="fieldCreate" class="modal fade" aria-hidden="true" data-backdrop="static" data-keyboard="false">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -85,183 +90,159 @@
                         </div>
                     </div>
                 </div>
+        </form>*@
+        <form name="createfield" asp-controller="Fields" asp-action="SaveField" method="post"
+              data-ajax="true" data-ajax-method="post" data-ajax-complete="completedField" enctype="multipart/form-data" autocomplete="off">
+
+            <!-- Modal -->
+            <div class="modal fade" id="add-field-model" role="dialog" aria-hidden="true" data-backdrop="static" data-keyboard="false" tabindex="-1">
+                <div class="modal-dialog">
+                    <!-- Modal content-->
+                    <div class="modal-content">
+                        <div class="modal-header bg-warning">
+                            <h4 class="modal-title">Template Field</h4>
+                            <button type="button" class="close" data-dismiss="modal" id="modelclose">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-group">
+                                <label class="required" for="FieldName">Name</label>
+                                <input type="text" id="FieldName" class="form-control" asp-for="Name" />
+                                <span asp-validation-for="Name" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label class="required" for="FieldDataType">DataType</label>
+                                <input type="text" id="FieldDataType" class="form-control" asp-for="ControlId" />
+                                <span asp-validation-for="ControlId" class="text-danger"></span>
+                            </div>                            
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-success " type="submit"><span class="glyphicon glyphicon-floppy-saved"></span> Create</button>
+                            <button type="button" class="btn btn-danger" data-dismiss="modal" id="btnFieldClose"> <span class="glyphicon glyphicon-remove"></span> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </form>
     </div>
 </div>
 
-@section Scripts {
+@section scripts
+    {
+    <!-- Jquery js -->
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+
+    <!-- Data tables js -->
+    <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/lib/datatables/js/dataTables.buttons.min.js"></script>
+    <script src="~/lib/datatables/js/dataTables.rowReorder.min.js"></script>
+    <script src="~/lib/datatables/js/dataTables.responsive.min.js"></script>
+    <script src="~/lib/datatables/js/responsive.bootstrap.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
+            //completedForm = function (xhr) {
+            //    debugger
+            //}
             bind();
-            $("#modelclose").click(function () {
-                $("#newfieldcreate").removeClass("disabled");
-                $("#btnReset").removeClass("disabled");
-                $("#btnClose").removeClass("disabled");
-                ClearCreateField();
-            });
-            $('#btnReset,#btnClose').click(function () {
-                ClearCreateField();
+
+            $('#btnFieldClose').click(function () {
+                clearFieldCreate();
             });
         });
-        function ClearCreateField() {
 
-            $('#lblFieldName').hide();
-            $('#lblFieldDataType').hide();
+        completedField = function (xhr) {
+            debugger
+            var rtn = JSON.parse(xhr.responseText);
+            if (rtn.error == false) {
+                Swal.fire({
+                    title: 'Template Field',
+                    text: rtn.message,
+                    type: 'success',
+                    allowOutsideClick: false
+                }).then(function () {
+                    $('#add-field-model').hide();
+                    //oTable = $('#tbField').DataTable();
+                    //oTable.draw();
+                });
+                $('#btnFieldClose').click();
+                clearFormCreate();
+            }
+            else {
+                Swal.fire({
+                    icon: 'error',
+                    title: 'Template Field',
+                    text: 'Oops!! Something Went Wrong!',
+                    type: 'error',
+                    allowOutsideClick: false
+                });
+            }
+        };
 
-            $('#FieldName').val('');
-            $('#selecteddatatype').val('');
+        function clearFieldCreate() {
+            $('.field-validation-error').empty();
+            var frm = document.getElementsByName('createfield')[0];
+            frm.reset();
         }
-
         function bind() {
-            debugger;
-            try {
-                var oTable;
-                var dvHt = screen.height - 380;
-                /* Add the events etc before DataTables hides a column */
-                $("thead input").keyup(function () {
-                    /* Filter on the column (the index) of this element */
-                    oTable.fnFilter(this.value, oTable.oApi._fnVisibleToColumnIndex(
-                        oTable.fnSettings(), $("thead input").index(this)));
-                });
 
-                $.ajax({
-                    type: "GET",
-                    url: '@Url.Action("GetAllFields", "Fields")',
-                    contentType: "application/json; charset=utf-8",
-                    dataType: "json",
-                    success: function (data, status, jqXHR) {
-                        console.log(data);
-                        if (data.length > 0) {
-                            $.each(data, function (index, item) {
 
-                                var Row = 0;
-                                oTable = $('#tbFields').dataTable({
-                                    "bPaginate": true,
-                                    "searching": true,
-                                    "destroy": true,
-                                    "autoWidth": false,
-                                    "scrollX": true,
-                                    "pageLength": 10,
-                                    "pagingType": "full_numbers",
-                                    "lengthMenu": [[05, 10], [05, 10]],
-                                    "iDisplayLength": 10,
-                                    "order": [],
-                                    "aaData": data,
-                                    "language": {
-                                        "searchPlaceholder": "Search",
-                                        "search": "",
-                                        "sEmptyTable": "No Data Available"
-                                    },
-                                    "responsive": true,
-                                    "aoColumns": [
-                                        {
-                                            mData: null,
-                                            render: function (item, type, row) {
+            $("#tbField").DataTable({
+                "processing": true, // for show progress bar
+                "serverSide": true,
+                "filter": true, // this is for disable filter (search box)
+                "orderMulti": false, // for disable multiple column at once
+                "ajax": {
+                    "url": '@Url.Action("GetAllFields", "Fields")',
+                    "type": "GET",
+                    headers: { "RequestVerificationToken": $('input[name="__RequestVerificationToken"]').val() },
+                    "datatype": "json"
+                },
+                "columnDefs": [{
+                    "targets": '_all',
+                    "defaultContent": ""
+                }],
+                "columns": [
+                    { "data": "name", "name": "Name", "autoWidth": true },
+                    { "data": "controlid", "name": "ControlId", "autoWidth": true },
 
-                                                if (item.Id != null && item.Id != "" && item.Id != undefined) {
-                                                    return item.Id;
-                                                } else {
-                                                    return "N/A";
-                                                }
-                                            }
-                                        },
-                                        {
-                                            mData: null,
-                                            render: function (item, type, row) {
-
-                                                if (item.Name != null && item.Name != "" && item.Name != undefined) {
-                                                    return item.Name;
-                                                } else {
-                                                    return "N/A";
-                                                }
-                                            }
-                                        },
-                                        {
-                                            mData: null,
-                                            render: function (item, type, row) {
-
-                                                if (item.DataType != null && item.DataType != "" && item.DataType != undefined) {
-                                                    return item.DataType;
-                                                } else {
-                                                    return "N/A";
-                                                }
-                                            }
-                                        },
-
-                                        {
-                                            mData: null,
-                                            render: function (item, type, row) {
-                                                return '<button type="submit"  onclick="showDiv(' + item.Id + ');" class="btn btn-info btn-xs"> <i class="fa fa-pencil">Properties</i></button>';
-
-                                            }
-                                        }
-                                    ]
-                                });
-                            })
+                    
+                    {
+                        'bSortable': false,
+                        "autoWidth": true,
+                        "render": function (data, type, row) {
+                            //return '<a  type="button"  data-tw-toggle="modal" class="tooltip btn btn-success text-white" title="Fields">Fields</a> > ';
+                            return '<a>Properties </>'
                         }
-                        else {
-                            $("#tdField").html('<tr><td colspan="10" style="text-align:center">No Fields Available</td></tr>');
-                        }
-                    },
-
-                    error: function (xhr) {
                     }
-                });
-                $('a.toggle-vis').on('click', function (e) {
-                    e.preventDefault();
+                ]
 
-                    // Get the column API object
-                    var column = oTable.column($(this).attr('data-column'));
+            });
 
-                    // Toggle the visibility
-                    column.visible(!column.visible());
-                });
-                //oTable.columns.adjust().draw();
-            }
-            catch (ex) {
-                //  CaptureLogForJquery(ex.message, ex.stack, 'Bind()');
-            }
         }
         function validateCreateField() {
             createFlag = false;
             var cFieldName = $('#FieldName').val();
 
             if (cFieldName == null || cFieldName == "" || cFieldName == undefined) {
-                $('#lblFiledName').show();
+                $('#lblFieldName').show();
                 createFlag = true;
             }
             else {
                 $('#lblFieldName').hide();
             }
 
-            function addField(event) {
+            var cFieldDataType = $('#cFieldDataType').val();
 
-                var formData = new FormData();
-                formData.append('Name', $('#FieldName').val());
-                formData.append('DataType', $('#selecteddatatype').val());
+            if (cFieldDataType == null || cFieldDataType == "" || cFieldDataType == undefined) {
+                $('#lblcFieldDataType').show();
+                createFlag = true;
+            }
+            else {
+                $('#lblcFieldDataType').hide();
+            }          
 
-                try {
-                    $.ajax({
-                        url: '@Url.Action("Create", "Fields")',
-                        enctype: 'multipart/form-data',
-                        type: 'POST',
-                        cache: false,
-                        contentType: false,
-                        processData: false,
-                        data: formData,
-                        success: function (response) {
-                            alert("New Field created");
-
-                            $('#FieldName').val();
-                            $('#selecteddatatype').val();
-                            $('#createField').modal('hide');
-                            location.reload(true);
-                        },
-                        error: function (error) { alert(error); },
-                    });
-                } catch (ex) {
-                    alert('Something went wrong!');
-                }
+            return createFlag;
+        }
 
     </script>
+
 }
