--- a/DynamicForm/Views/Fields/Index.cshtml
+++ b/DynamicForm/Views/Fields/Index.cshtml
@@ -202,7 +202,7 @@
                 }],
                 "columns": [
                     { "data": "name", "name": "Name", "autoWidth": true },
-                    { "data": "controlid", "name": "ControlId", "autoWidth": true },
+                    { "data": "controlid", "name": "Data Type", "autoWidth": true },
 
                     
                     {
